# e2b-mcp-hackathon

./: .env.example  .gitignore  GETTING_STARTED.md  INDEX.md  PROJECT_TREE.md  README.md  SETUP.md  architecture.md  pyproject.toml  requirements.txt
docs/: features.md
examples/: basic_scan.py  full_pipeline.py  test_e2b.py
src/: __init__.py  cli.py
src/core/: config.py  orchestrator.py
src/mcp/: __init__.py  client.py  github.py  slack.py
src/patch/: __init__.py  generator.py
src/sandbox/: __init__.py  manager.py
src/utils/: logger.py
src/vulnerability/: __init__.py  scanner.py
