[project]
name = "ai-devsecops-orchestrator"
version = "0.1.0"
description = "AI-powered DevSecOps pipeline using MCP and E2B"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.1.2",
    "e2b-code-interpreter>=0.0.9",
    "openai>=1.54.0",
    "aiohttp>=3.10.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.7",
    "rich>=13.9.0",
    "pyyaml>=6.0.2",
]

[project.scripts]
devsecops = "src.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
